[gd_scene load_steps=23 format=2]

[ext_resource path="res://Skripte/Rocket_Horse_Building.gd" type="Script" id=1]
[ext_resource path="res://Grafiken/pferd.png" type="Texture" id=2]
[ext_resource path="res://Grafiken/rocking.png" type="Texture" id=3]
[ext_resource path="res://Grafiken/raum.png" type="Texture" id=4]
[ext_resource path="res://Grafiken/pferd_gesaegt.png" type="Texture" id=5]
[ext_resource path="res://Grafiken/pferd_gefeilt.png" type="Texture" id=6]
[ext_resource path="res://Grafiken/fuchs.png" type="Texture" id=7]
[ext_resource path="res://Grafiken/feile.png" type="Texture" id=8]
[ext_resource path="res://Grafiken/torx2.png" type="Texture" id=9]
[ext_resource path="res://Skripte/pferd_1.gd" type="Script" id=10]
[ext_resource path="res://Skripte/pferd_2.gd" type="Script" id=11]
[ext_resource path="res://Skripte/fuchs.gd" type="Script" id=12]
[ext_resource path="res://Skripte/pferd_3.gd" type="Script" id=13]
[ext_resource path="res://Skripte/torx.gd" type="Script" id=14]
[ext_resource path="res://Skripte/feile.gd" type="Script" id=15]
[ext_resource path="res://Grafiken/arbeitsauftrag-sheet.png" type="Texture" id=16]
[ext_resource path="res://Grafiken/close.png" type="Texture" id=17]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 230, 251 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 230, 0, 230, 251 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 16 )
region = Rect2( 460, 0, 230, 251 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 464.195, 243.318 )

[node name="Rocket_Horse_Building" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2.48511, 0 )
texture = ExtResource( 4 )
centered = false

[node name="auftrag" type="AnimatedSprite" parent="."]
position = Vector2( 45.2867, -25.2495 )
scale = Vector2( 1.61809, 1.61809 )
frames = SubResource( 4 )
speed_scale = 0.05
playing = true
centered = false

[node name="done" type="Sprite" parent="."]
position = Vector2( 336, -27 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )
centered = false

[node name="pferd_3" type="Sprite" parent="."]
position = Vector2( 472, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
centered = false
script = ExtResource( 13 )

[node name="pferd_3" type="Area2D" parent="pferd_3"]

[node name="schrauben" type="CollisionShape2D" parent="pferd_3/pferd_3"]
position = Vector2( 522.952, 294.998 )
shape = SubResource( 5 )

[node name="pferd_2" type="Sprite" parent="."]
position = Vector2( 472, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )
centered = false
script = ExtResource( 11 )

[node name="pferd_2" type="Area2D" parent="pferd_2"]

[node name="feile" type="CollisionShape2D" parent="pferd_2/pferd_2"]
position = Vector2( 522.952, 294.998 )
shape = SubResource( 5 )

[node name="pferd_1" type="Sprite" parent="."]
position = Vector2( 472, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
centered = false
script = ExtResource( 10 )

[node name="pferd_1" type="Area2D" parent="pferd_1"]

[node name="saege" type="CollisionShape2D" parent="pferd_1/pferd_1"]
position = Vector2( 522.952, 294.998 )
shape = SubResource( 5 )

[node name="fuchs" type="Sprite" parent="."]
position = Vector2( 880, 514 )
scale = Vector2( 0.346774, 0.346774 )
texture = ExtResource( 7 )
script = ExtResource( 12 )

[node name="fuchs" type="KinematicBody2D" parent="fuchs"]
input_pickable = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="fuchs/fuchs"]
position = Vector2( -330.559, 45.6893 )
rotation = 4.69843
scale = Vector2( 0.725004, 0.690651 )
polygon = PoolVector2Array( -127.339, -120.86, -30.0015, -125.495, 289.822, 945.217, 7.07935, 1089.83, -99.5283, 909.062, -145.88, 927.603 )

[node name="feile" type="Sprite" parent="."]
position = Vector2( 36, 375 )
scale = Vector2( 0.502857, 0.502857 )
texture = ExtResource( 8 )
script = ExtResource( 15 )

[node name="feile" type="KinematicBody2D" parent="feile"]
input_pickable = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="feile/feile"]
position = Vector2( 1.00375, 5.03857 )
scale = Vector2( 0.44684, 0.44684 )
polygon = PoolVector2Array( -46.4921, 799.961, -59.7393, 203.839, -44.3472, -367.941, -38.5512, -583.242, -45.1676, -598.94, 1.19727, -777.777, 67.4331, -764.529, 100.551, -188.278, 93.9275, 719.151, 84.6541, 839.701 )

[node name="torx" type="Sprite" parent="."]
position = Vector2( 285.933, 475.833 )
scale = Vector2( 0.317333, 0.317333 )
texture = ExtResource( 9 )
script = ExtResource( 14 )

[node name="torx" type="KinematicBody2D" parent="torx"]
input_pickable = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="torx/torx"]
position = Vector2( 9.27867, -3.91219 )
scale = Vector2( 2.16645, 2.16645 )
polygon = PoolVector2Array( -204.927, 82.8824, -54.0562, -18.3116, 209.048, -141.584, 225.608, -123.186, 2.98059, 51.6042, -133.172, 139.919, -201.248, 147.279, -239.885, 106.801 )

[node name="close" type="TextureRect" parent="."]
margin_left = 968.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 56.0
mouse_default_cursor_shape = 2
texture = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="pferd_3/pferd_3" to="pferd_3" method="_on_pferd_3_body_entered"]
[connection signal="body_entered" from="pferd_2/pferd_2" to="pferd_2" method="_on_pferd_2_body_entered"]
[connection signal="body_entered" from="pferd_1/pferd_1" to="pferd_1" method="_on_pferd_1_body_entered"]
[connection signal="input_event" from="fuchs/fuchs" to="fuchs" method="_on_fuchs_input_event"]
[connection signal="input_event" from="feile/feile" to="feile" method="_on_feile_input_event"]
[connection signal="input_event" from="torx/torx" to="torx" method="_on_torx_input_event"]
[connection signal="gui_input" from="close" to="." method="_on_close_gui_input"]
